# opengl_basics

./: CMakeLists.txt
include/glad/: glad.h
shaders/: basic.frag  basic.vert
src/: glad.c  main.cpp  shader.h
